# MuNet

./: .gitignore  CMakeLists.txt  DOCUMENTATION_PLAN.md  Makefile  Makefile.agents  ReadMe.md  TODO.md  build.sh  compile_commands.json  mkdocs.yml  pyproject.toml  run_perf_capture.sh  run_remaining_perf.sh  test.sh  unit_test.sh  vulkan_profile_output.txt
.github/workflows/: wheels.yml
demos/: README.md
demos/features/: multi_gpu_allreduce_training_demo.py
demos/inference/: batch_forward_demo.py  e2e_train_save_load_infer.py  serialization_roundtrip_demo.py
demos/inference/foundation/: batch_forward_demo.py  e2e_train_save_load_infer.py
demos/inference/quantization/: README.md
demos/llm/: decoder_block_demo.py  gpt3_multi_gpu_demo.py  tiny_llm.py
demos/mnist/: .gitignore  mnist.py  mnist_dynamic_dtype.py
demos/multigpu/: auto_offload_strategy_compare_demo.py  gpt3_multi_gpu_demo.py  model_offload_manual_demo.py  multi_gpu_allreduce_training_demo.py  offload_plan_export_import_demo.py
demos/operators/: transformer_ops_showcase.py
demos/serialization/framework_interop/: pytorch_export_demo.py  pytorch_import_demo.py  test_torch.py
demos/serialization/munet/: serialization_roundtrip_demo.py
demos/torch/: pytorch_export_demo.py  pytorch_import_demo.py  test_torch.py
demos/transformers/: decoder_block_demo.py  tiny_llm.py
demos/unet/: .gitignore  unet.py
demos/visual/instance_segmentation/: README.md
demos/visual/object_detection/: README.md  fpn_e2e_demo.py  operator_gap_report.py  rtdetr_e2e_demo.py  yolo_e2e_demo.py
demos/visual/semantic_segmentation/: mnist.py  unet.py
docker/: Dockerfile.builder
documentation/: index.md
documentation/api/: cpp.md  python.md
documentation/architecture/: backends.md  coverage_feedback_loop_plan.md  decision_log.md  dtype_parity_inventory.md  dtype_sensitive_inventory.md  gpt3_local_roadmap.md  inference_phase0_audit.md  inference_phase1_boundary_split.md  inference_phase2_runtime_slimming.md  inference_phase3_memory_backend_policy.md  inference_phase5_validation_rollout.md  inference_runtime_plan.md  model_offload_phased_plan.md  offload_planner_followups.md  plugin_runtime_packaging_rfc.md  production_readiness_review_2026-03-26.md  refactor_roadmap.md  runtime.md
documentation/contributing/: add_new_op.md
documentation/getting-started/: build_install.md  overview.md
documentation/guides/: debugging_playbook.md  design_patterns.md  inference_engine.md  multi_precision_roadmap.md  offload_planner_strategy_guide.md  precision_dispatch_usage.md  serialization.md  tensor_workflow.md  training_precision.md
documentation/performance/: observability_roadmap.md  profiling.md  vulkan_baseline.md  vulkan_cuda_parity_results.md  vulkan_matmul_optimization.md  vulkan_small_matmul_adaptive_tiling.md
documentation/tutorials/: e2e_workflow.md
python/munet_nn/: __init__.py
python/munet_nn/_helpers/: __init__.py  onnx_integration.py
python_src/: onnx_integration.py  pytorch_interop.py
src/: activation.hpp  amp.hpp  backend.hpp  bindings.cpp  device.hpp  dropout.hpp  inference.hpp  inference_serialization.cpp  kernels.hpp  layer.hpp  loss.hpp  model.hpp  munet.cu  munet.hpp  nn.hpp  ops.hpp  optim.hpp  optimizer.hpp  profiler.hpp  storage.hpp  tensor.cpp  tensor.hpp  training_guard.hpp  transforms.hpp  types.hpp  util.hpp
src/autograd/: autograd.hpp  engine.hpp
src/autograd/nodes/: activation_nodes.hpp  add_node.hpp  conv2d_node.hpp  elementwise_nodes.hpp  loss_nodes.hpp  matmul_node.hpp  normalization_node.hpp  pooling_nodes.hpp  shape_nodes.hpp
src/backend/: backend_manager.cpp  cpu_backend.hpp  cuda_backend.cu  cuda_backend.hpp  debug_backend.cpp  debug_backend.hpp  plugin_loader.cpp  plugin_loader.hpp  vulkan_backend.cpp  vulkan_backend.hpp
src/backend/plugins/: plugin_common.hpp  plugin_cu12.cpp  plugin_cu13.cpp  plugin_vk.cpp
src/core/: all_reduce_runtime.hpp  backend.hpp  grad_mode.hpp  kernel_fusion_planner.cpp  kernel_fusion_planner.hpp  module.hpp  op_dispatch.cpp  op_dispatch.hpp  ops.hpp  tensor.hpp  util.hpp
src/core/ops/: activations.cpp  activations.hpp  add.cpp  add.hpp  common.hpp  conv2d.cpp  conv2d.hpp  elementwise.cpp  elementwise.hpp  loss.cpp  loss.hpp  matmul.cpp  matmul.hpp  normalization.cpp  normalization.hpp  pooling.cpp  pooling.hpp  shape.cpp  shape.hpp
src/core/util/: logging.hpp  profiler.hpp  timer.hpp
src/nn/: activations.hpp  attention.hpp  linear.hpp  module.hpp  normalization.hpp  pooling.hpp  sequential.hpp
src/python_src/: serialization.py
src/serialization/: hybrid_format.hpp
test/: test.cpp  test.py
tests/: test_allreduce_multigpu_training.py  test_amp.cpp  test_autograd.cpp  test_backend_manager.cpp  test_cross_backend_smoke.py  test_cuda.cpp  test_inference.cpp  test_kernel_fusion_planner.cpp  test_loss.cpp  test_models.cpp  test_nn.cpp  test_offload_phase1.py  test_offload_phase2.py  test_offload_phase3.py  test_ops.cpp  test_optim.cpp  test_performance.cpp  test_python.py  test_python_binding_surface.py  test_pytorch_interop.py  test_spatial.cpp  test_tensor.cpp  test_types.cpp  test_unet_offload_phase3.py  test_utils.hpp  test_vulkan.cpp  unified_tests.cpp
tests/perf/: vulkan_profiling.cpp  vulkan_transpose_test.cpp
tools/: build_in_docker.sh  dtype_coverage_report.cpp  inference_baseline.cpp  inference_boundary_check.cpp  runtime_execution_coverage_report.cpp
