[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.11",
]
build-backend = "scikit_build_core.build"

[project]
name = "munet-nn"
version = "0.1.1"
description = "MuNet: lightweight C++ tensor/autograd framework with Python bindings"
readme = "ReadMe.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "MuNet Contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
]



[project.optional-dependencies]
vk = []
cu12-vk = []
cu13-vk = []

[project.urls]
Homepage = "https://github.com/bryan-pakulski/MuNet"
Repository = "https://github.com/bryan-pakulski/MuNet"
Source = "https://github.com/bryan-pakulski/MuNet"

[tool.scikit-build]
minimum-version = "0.10"
cmake.version = ">=3.18"
cmake.build-type = "Release"
install.strip = true
cmake.args = [
  "-DMUNET_BUILD_TESTS=OFF",
  "-DMUNET_BUILD_TOOLS=OFF",
]
wheel.packages = ["python/munet_nn"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
skip = "*-musllinux_*"
build-verbosity = 1
test-command = "python -c \"import munet_nn as munet; import munet_nn._helpers.onnx_integration as _onnx; status = munet.backend_status(); assert isinstance(status, dict) and 'statuses' in status; assert isinstance(munet.list_available_backends(), list); print(munet.__doc__ is not None, _onnx.__name__)\""
